2013-06-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* electric.el (electric-pair-mode): Improve interaction with
	electric-layout-mode.
	(electric-pair-default-inhibit): Don't assume (eq char (char-before)).
	(electric-pair-syntax): Use text-mode-syntax-table in comments
	and strings.
	(electric-pair--insert): New function.
	(electric-pair-post-self-insert-function): Use it and
	electric--after-char-pos.

2013-06-19  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-help): Fix regexp.

2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-make-table-1): Implement <td rowspan>.
	(shr-table-horizontal-line): Allow nil as a value, and change the
	default.
	(shr-insert-table-ruler): Respect the nil value.

2013-06-18  Tom Tromey  <tromey@barimba>

	* net/eww.el (eww-next-url, eww-previous-url, eww-up-url, eww-top-url):
	New defvars.
	(eww-open-file): New defun.
	(eww-render): Initialize new variables.
	(eww-display-html): Handle "link" and "a".
	(eww-handle-link, eww-tag-link, eww-tag-a): New defuns.
	(eww-mode-map): Move "p" to "l".  Bind "p", "n", "t", and "u".
	(eww-back-url): Rename from eww-previous-url.
	(eww-next-url, eww-previous-url, eww-up-url, eww-top-url):
	New defuns.

2013-06-18  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-syntax-before-regexp-re):
	Distinguish ternary operator tokens from slash symbol and slash
	char literal.

2013-06-18  Juanma Barranquero  <lekktu@gmail.com>

	Convert symbol prettification into minor mode and global minor mode.

	* progmodes/prog-mode.el (prettify-symbols-alist): Rename from
	`prog-prettify-symbols', and make a local defvar instead of defcustom.
	(prettify-symbols--keywords): Rename from
	`prog-prettify-symbols-alist' and make a local defvar.
	(prettify-symbols--compose-symbol): Rename from
	`prog--prettify-font-lock-compose-symbol'.
	(prettify-symbols--make-keywords): Rename from
	`prog-prettify-font-lock-symbols-keywords' and simplify.